<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".CustomerFragment.CustomerCartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/menuBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/go_back"
            app:srcCompat="@drawable/outline_arrow_back_24" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_cart"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numOfItemText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_s" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        android:elevation="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtotal" />

            <TextView
                android:id="@+id/subTotalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_dollar" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tax" />
            <TextView
                android:id="@+id/taxText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_dollar" />
        </LinearLayout>

        <View
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#d3d3d3" />

        <LinearLayout
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/total" />

            <TextView
                android:id="@+id/totalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/zero_dollar" />
        </LinearLayout>

        <Button
            android:id="@+id/checkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_checkout" />
    </LinearLayout>
</LinearLayout>