<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_box"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/OrderNumberText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_test"
            android:textColor="#333333"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/OrderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/order_received"
            android:textColor="#785400"
            android:background="@drawable/rounded_box"
            android:backgroundTint="#FAF1A7"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/OrderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/cost_test"
            android:textColor="#FF6B00"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/OrderDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/date_test"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#E0E0E0" />

    <!-- Icons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="14dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/CircularStyleSmall"
                android:id="@+id/imgReceived"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/accent"
                android:src="@drawable/baseline_access_time_24" />

            <TextView
                android:id="@+id/textReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/received"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/CircularStyleSmall"
                android:background="@color/light_gray"
                android:padding="5dp"
                android:id="@+id/imgCooking"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/blue"
                android:src="@drawable/cooking" />

            <TextView
                android:id="@+id/textCooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cooking"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/CircularStyleSmall"
                android:background="@color/light_gray"
                android:id="@+id/imgReady"
                android:padding="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="@color/green"
                android:src="@drawable/outline_check_circle_24" />

            <TextView
                android:id="@+id/textReady"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ready"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                app:shapeAppearanceOverlay="@style/CircularStyleSmall"
                android:background="@color/light_gray"
                android:padding="5dp"
                android:id="@+id/imgDone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:tint="#DE000000"
                android:src="@drawable/truck" />

            <TextView
                android:id="@+id/textDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="#E0E0E0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/customerOrderNestedRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#E0E0E0" />

    <!-- Estimated time -->
    <TextView
        android:id="@+id/EstimatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min30"
        android:textColor="#777"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:drawablePadding="6dp"
        android:padding="5dp"
        android:gravity="center"
        app:drawableStartCompat="@drawable/ic_time" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/removeOrderBtn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_order"
        android:textColor="@color/white"
        android:backgroundTint="@color/accent"
        app:cornerRadius="10dp" />
</LinearLayout>